cabal-version: 3.8
author: Liisi Kerik
category: Parsing, Tokenisation, Utilities
description:
  The library provides a tiny general utilities module, and a simple combinator-based tokeniser and parser. Its main focus is
  not efficiency but simplicity of implementation and use. The choice operator for parsers is symmetric, avoiding the need to
  think about the order in which the alternatives are listed. The library provides error locations and supports adding locations
  to the parse tree. The library also provides a module for conveniently handling relative file paths.
license: BSD-3-Clause
license-file: LICENSE
maintainer: liisikerik@hotmail.com
name: Kawaii-Parser
synopsis: A simple parsing library and some additional utilities.
version: 4.0.0
library
  build-depends: base < 4.21, containers, directory, mtl, transformers
  default-extensions: FlexibleContexts, ScopedTypeVariables, StandaloneDeriving
  default-language: Haskell2010
  exposed-modules: Parser.Files, Parser.Locations, Parser.Parser, Parser.Utilities
  ghc-options: -Wall -Werror -Wno-x-partial
source-repository head
  location: https://github.com/liisikerik/kawaii_parser.git
  type: git